--- a/profile.html
+++ b/profile.html
@@ -20,15 +20,15 @@
       <form>
         <div class="form-group">
           <label for="newEmail">Promijeni email</label>
-          <input type="email" class="form-control" id="newEmail" placeholder="Novi email">
+          <input type="email" class="form-control emailInput" id="newEmail" placeholder="Novi email">
         </div>
         <div class="form-group">
           <label for="newPassword">Promijeni lozinku</label>
-          <input type="password" class="form-control" id="newPassword" placeholder="Nova Lozinka">
+          <input type="password" class="form-control pwInput" id="newPassword" placeholder="Nova Lozinka">
         </div>
         <div class="form-group">
           <label for="newPasswordRepeat">Ponovi lozinku</label>
-          <input type="password" class="form-control" id="newPasswordRepeat" placeholder="Ponovi lozinku">
+          <input type="password" class="form-control repeatPw" id="newPasswordRepeat" placeholder="Ponovi lozinku">
         </div>
         
         <table class="preferences">
@@ -48,7 +48,8 @@
 
 
         </div>
-        <button type="submit" class="btn btn-default">Spremi</button>
+        <button type="submit" class="btn btn-default spremi">Spremi</button>
+        <div class="kvadrat"></div>
       </form>
     </div>
   </div>
@@ -68,5 +69,6 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/js.js"></script>
+<script type="text/javascript" src="js/profile.js"></script>
 </body>
 </html>
