--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       
       <ul class="nav navbar-nav navbar-right">
         <li><a href="login.html">Prijavi se</a></li>
+        <li><a href="login.html">Registriraj se</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Račun <i class="userIcon"></i><span class="caret"></span></a>
           <ul class="dropdown-menu">
