--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Poslovi <span class="sr-only">(current)</span></a></li>
-        <li><a href="predajOglas.html">Predaj oglas</a></li>
+        <li class="active" id="orange"><a href="index.html">Poslovi <span class="sr-only">(current)</span></a></li>
+        <li id="red"><a href="predajOglas.html">Predaj oglas</a></li>
         
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="login.html">Prijavi se</a></li>
-        <li><a href="login.html">Registriraj se</a></li>
-        <li class="dropdown">
+        <li id="blue"><a href="login.html">Prijavi se <i class="fa fa-sign-in" aria-hidden="true"></i></a></li>
+        <li id="yellow"><a href="login.html">Registriraj se <i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
+        <li class="dropdown" id="green">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Račun <i class="userIcon"></i><span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="index.html#!/profile/1">Profil</a></li>
-            <li><a href="#">Životopis</a></li>
-            <li><a href="#">Spremljeno</a></li>
-            <li><a href="#">Poruke</a></li>
+            <li id="purple"><a href="index.html#!/profile/1">Profil</a></li>
+            <li id="purple"><a href="#">Životopis</a></li>
+            <li id="purple"><a href="#">Spremljeno</a></li>
+            <li id="purple"><a href="#">Poruke</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Odjavi se</a></li>
+            <li id="black"><a href="#">Odjavi se</a></li>
           </ul>
         </li>
       </ul>
