--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li id="blue"><a href="login.html">Prijavi se <i class="fa fa-sign-in" aria-hidden="true"></i></a></li>
         <li id="yellow"><a href="login.html">Registriraj se <i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
         <li class="dropdown" id="green">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Račun <i class="userIcon"></i><span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Račun <i class="fa fa-user-circle" aria-hidden="true"></i><span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li id="purple"><a href="index.html#!/profile/1">Profil</a></li>
             <li id="purple"><a href="#">Životopis</a></li>
