--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <input type="password" class="form-control pw" id="basic-url" aria-describedby="basic-addon3" placeholder="Unesite lozinku..." required>
   </div>
     <button type="button" class="btn btn-primary loginBtn">Prijavi se</button>
-    <a href="#" class="forgotPw">Forgot password?</a>
+    <a href="#" class="forgotPw">Zaboravljena lozinka?</a>
 </div>
 
 
